--- a/chatbot-frontend/src/index.css
+++ b/chatbot-frontend/src/index.css
@@ -1,11 +1,15 @@
+html {
+  overflow: hidden;
+}
+
 html,
-body {
+body,
+div#root {
   height: 100%;
 }
 
 body {
   margin: 0;
-  padding: 2rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
